--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/05/17</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N. (1 woman)</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>1 drowned after boat sank while travelling from Anjouan (KM) to Mayotte (FR); 10 missing, 13 survivors</b><br>Source: GazetteComores<br>
+Found dead: <b>31/12/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Salko L. (man, 39)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>suicide, hanged himself in psychiatric wing of detention centre in Tegel (DE)</b><br>Source: CARF/ARI/ZAG<br>
 
 <br>
 
