--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/12/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Salko L. (man, 39)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>suicide, hanged himself in psychiatric wing of detention centre in Tegel (DE)</b><br>Source: CARF/ARI/ZAG<br>
+Found dead: <b>28/10/15</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died when boat capsized near Agathonisi (GR); 372 survivors</b><br>Source: IOM/UNHCR<br>
 
 <br>
 
