--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/08/99</b><br>Number of person: <b>40</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kosovo (Roma)</b><br>Cause of death: <b>drowned in the Adriatic Sea while trying to reach Italy in small boat</b><br>Source: Romnews/Independent/Tampere Digest/LS/Vita<br>
+Found dead: <b>06/09/12</b><br>Number of person: <b>31</b><br>Name, gender, age: <b>N.N (3 babies; 28 children)</b><br>Region of origin: <b>Palestine, Syria, Iraq</b><br>Cause of death: <b>drowned after overcrowded boat from Ahmetbeyli (TR) sank in the Aegean Sea; 46 survivors</b><br>Source: Reu./AFP/Le Monde/Migreurop/SP/MNSAljazeera<br>
 
 <br>
 
