--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/05/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died in suspected fascist arson attack in Heppenheim in Hesse (DE)</b><br>Source: CARF/ZAG<br>
+Found dead: <b>Jan 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Gnanasegaram Selvarajah (man)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>died after racist attack which had been ignored by hospital staff in Palermo (IT)</b><br>Source: CARF/IRR/Searchlight<br>
 
 <br>
 
