--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/11/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned during rescue attempt near Fuerteventura (ES)</b><br>Source: MNS/AFVIC/Libertaddigital/NOB<br>
+Found dead: <b>2005</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdullah Tokhi (man, 35)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>murdered in Afghanistan after forced repatriation from Great Britain, asylum claim rejected</b><br>Source: Independent<br>
 
 <br>
 
