--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/09/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Peiman Bahmani (man, 29)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>stabbed to death on the street he lived on in Hendon (GB)</b><br>Source: Socialist Worker/IRR<br>
+Found dead: <b>12/11/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jianping Liu (woman, 35)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>jumped from bridge near Heathrow (GB) after police questioned her about immigration status</b><br>Source: IRR/UxbGaz<br>
 
 <br>
 
