--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/01/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mariame Getu Hagos (man, 24)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>died being restrained by police as deportation flight prepared to take off from Paris (FR) to Johannesburg (SA)</b><br>Source: NCADC/AI/AN/VK/Vivre/MNS/Borderzerolist/IND/JT<br>
+Found dead: <b>09/11/01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>reportedly drowned near Majicavo, Mayotte (FR), when boat sank trying to reach French territory</b><br>Source: Mayotte sans frontières<br>
 
 <br>
 
