--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/04/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Apedo Lossou-Gavo (man)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>suicide, hanged himself in Landshut (DE) after his asylum application was rejected</b><br>Source: MNS/ProAsyl/AG3F/JW/ZAG<br>
+Found dead: <b>25/08/08</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 pregnant women)</b><br>Region of origin: <b>Eritrea, Ghana, Somalia</b><br>Cause of death: <b>drowned after dinghy from Libya capsized near coast of Malta</b><br>Source: Telegraph/MaltaIndependent/PICUM/MNS/LR/NOB<br>
 
 <br>
 
