--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/05/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Olga Blaskevica (woman, 29)</b><br>Region of origin: <b>Latvia</b><br>Cause of death: <b>murdered in Harmondsworth removal centre (GB) while awaiting deportation</b><br>Source: CARF/Metropolitan Police/IRR/NCADC<br>
+Found dead: <b>27/03/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>blown up in minefield near the Evros River (GR) trying to cross Turkish-Greek border</b><br>Source: AFP/MNS/AP<br>
 
 <br>
 
