--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/06/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohamed Badaoui (boy, 9)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died from toxic fumes after arson attack on refugee centre in Bochum (DE)</b><br>Source: ARI<br>
+Found dead: <b>25/07/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned, body found off coast of Kos (GR); likely on boat that sank carrying 13 migrants</b><br>Source: Xinhua/GR/TodZam<br>
 
 <br>
 
