--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/07/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned, body found off coast of Kos (GR); likely on boat that sank carrying 13 migrants</b><br>Source: Xinhua/GR/TodZam<br>
+Found dead: <b>02/02/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sammy Nelson (man, 26)</b><br>Region of origin: <b>Liberia</b><br>Cause of death: <b>beaten to death by police during blitz operation in container camp in Munich (DE)</b><br>Source: Was geht ab?/IRR/ZAG<br>
 
 <br>
 
