--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/06/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sillih Peder (23)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>shot by security forces while trying to enter Turkey near Aslanyazi (TR)</b><br>Source: HRFT/ProAsyl<br>
+Found dead: <b>30/01/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Senida P. (woman, 26)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>suicide, jumped out of 8th floor window in Frankfurt (DE) out of fear of deportation</b><br>Source: ARI<br>
 
 <br>
 
