--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/09/97</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned near Tangier (MA) while travelling to Spain</b><br>Source: VK/taz/EP/MNS/ELM<br>
+Found dead: <b>06/08/01</b><br>Number of person: <b>26</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>reportedly drowned after boat sank trying to reach Mayotte (FR)</b><br>Source: Mayotte sans frontières<br>
 
 <br>
 
