--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/11/05</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>Asia</b><br>Cause of death: <b>died of hypothermia while attempting to cross Slovak-Ukrainian border</b><br>Source: State Border Service (UA)<br>
+Found dead: <b>02/01/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iran, Somalia</b><br>Cause of death: <b>reportedly drowned after boat carrying 15 people sank off coast of Turkey</b><br>Source: TP/PICUM/NOB<br>
 
 <br>
 
