--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/12/03</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned near Granada (ES) after shipwreck of boat carrying 48 migrants</b><br>Source: EP<br>
+Found dead: <b>08/10/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±20)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaway, fell from truck onto road near Folkestone, Kent (GB)</b><br>Source: Mirror/BBC/IRR<br>
 
 <br>
 
