--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/11/17</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N. (1 boy; 4 women; 23 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>missing after boat capsized in the Strait of Gibraltar between Asilah (MA) and Spain; 6 people rescued</b><br>Source: Caminando/ElPaís/IOM<br>
+Found dead: <b>23/04/09</b><br>Number of person: <b>35</b><br>Name, gender, age: <b>N.N. (9 women; 26 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>bodies found after boat travelling from Somalia shipwrecked east of Aden (YE)</b><br>Source: MUGAK/Can7/EFE/UNHCR/LR/GARA<br>
 
 <br>
 
