--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/06/17</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies retrieved in Janzour, west of Tripoli (LY)</b><br>Source: RCLibya/IOM Libya<br>
+Found dead: <b>07/09/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Neisse River near Deschka (DE) while trying to cross the Polish-German border</b><br>Source: ARI/ZAG<br>
 
 <br>
 
