--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/07/03</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in 2 shipwrecks near Sur de Aiun (MA)</b><br>Source: MUGAK<br>
+Found dead: <b>21/12/98</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned after small boat carrying migrants sank near Alboran Island (ES)</b><br>Source: MNS/taz<br>
 
 <br>
 
