--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/10/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ferrid Xhevdet (man, 25)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>died in solitary confinement in detention centre in Steenokkerzeel (BE) after trying to escape</b><br>Source: MRAX/MNS/ST/IRR<br>
+Found dead: <b>15/05/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Macedonia</b><br>Cause of death: <b>drowned in the Oder River (DE) after jumping off bridge to avoid border guards who were chasing him</b><br>Source: MOZ/ZAG<br>
 
 <br>
 
