--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/04/17</b><br>Number of person: <b>99</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing in several shipwrecks on same day in the Mediterranean Sea between Libya and Italy</b><br>Source: IOM Italy<br>
+Found dead: <b>Jan 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>beaten to death in Amersfoort (NL), asylum seeker and psychiatric patient</b><br>Source: CARF/IRR/Searchlight<br>
 
 <br>
 
