--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/05/06</b><br>Number of person: <b>37</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>11 found mummified in boat drifting in the Atlantic Sea near the Caribbean on way to Spain; 26 missing</b><br>Source: MNS/IRR/IPL/ST/FE/EP/NOB/APDHA<br>
+Found dead: <b>28/10/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Esawy Rashedal (25)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>drowned after being forced overboard by smugglers in waters near Otranto (IT)</b><br>Source: IRR<br>
 
 <br>
 
