--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/05/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Asif Azmad (boy, 17)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>reportedly a stowaway, found hidden under vehicle on the A3 highway near Clanfield (GB)</b><br>Source: IRR<br>
+Found dead: <b>Mar 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Raif (boy, 2)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>missing after boat sank between Libya and Italy; mother drowned, father and 3 siblings survived</b><br>Source: SP<br>
 
 <br>
 
