--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Raif (boy, 2)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>missing after boat sank between Libya and Italy; mother drowned, father and 3 siblings survived</b><br>Source: SP<br>
+Found dead: <b>04/11/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Senad Becirovic (man)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>suicide, in Berlin (DE) after he was ordered to leave Germany</b><br>Source: SZ/FR/MNS/ZAG<br>
 
 <br>
 
