--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/04/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>body recovered on Tajoura beach (LY)</b><br>Source: IOM Libya<br>
+Found dead: <b>19/12/14</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat capsized near northern Morocco while travelling to Spain</b><br>Source: BS/AAN/MNS<br>
 
 <br>
 
