--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2009</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jonson Ibitui (man)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died of heart attack from stress soon after release following 1 year in detention in Busmantsi (BG)</b><br>Source: GloDP/IRR<br>
+Found dead: <b>27/06/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ramazan Kumluca (man, 19)</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>suicide, hanged himself at Campsfield House removal centre (GB) after 3rd asylum claim was rejected</b><br>Source: TI/IRR/NCADC/BBC/PICUM/Independent<br>
 
 <br>
 
