--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/06/17</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Pakistan, Afghanistan</b><br>Cause of death: <b>accident with minibus driven by 16-year-old near Pazardjik (BG) close to Turkish-Greek border; 7 survivors</b><br>Source: DW/IOM<br>
+Found dead: <b>23/04/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Yussuf Diao (man)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>drowned after boat carrying passengers from Kolda region (SN) was shipwrecked off coast of Morocco</b><br>Source: Book:LosInvisiblesDeKolda/MUGAK/ELM/FE<br>
 
 <br>
 
