--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/08/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ousmane Sow</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>died from liver infection in hospital in Conakry (GN) after violent deportation from Düsseldorf (DE)</b><br>Source: ARI<br>
+Found dead: <b>22/04/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Maalek Zarga (man, 21)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>went missing in the Mediterranean Sea while trying to reach Europe from Aouled al-Mabrouk (TN)</b><br>Source: Ftcr/HNS/CPD<br>
 
 <br>
 
