--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/12/95</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>missing after boat capsized near Santa Cesarea Terme (IT)</b><br>Source: VK/IRR/ILM/CDS/FECL<br>
+Found dead: <b>03/11/96</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 young men)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>hit by train near Ventimiglia (IT) while trying to walk to France along railroad tracks</b><br>Source: IRR<br>
 
 <br>
 
