--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 03</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (2 children; 1 adult)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>thrown overboard from ship travelling from Tunisia to Sicily (IT)</b><br>Source: Haarlems Dagblad<br>
+Found dead: <b>16/06/17</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>bodies found in advanced state of decomposition on boat adrift at sea, 70 miles off Cartagena (ES)</b><br>Source: SalvaM<br>
 
 <br>
 
