--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/08/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, found in landing bay of plane at Heathrow Airport (GB) after flight from South Africa</b><br>Source: GuardianUn./IRR/BBC<br>
+Found dead: <b>25/08/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Muttavel Vasananthan (man, 25)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suicide, hanged himself in Norwich Prison (GB), Tamil asylum seeker</b><br>Source: CARF/IRR/Searchlight<br>
 
 <br>
 
