--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/08/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Muttavel Vasananthan (man, 25)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suicide, hanged himself in Norwich Prison (GB), Tamil asylum seeker</b><br>Source: CARF/IRR/Searchlight<br>
+Found dead: <b>14/03/11</b><br>Number of person: <b>40</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned after boat sank near Kerkenneh (TN) on way to Lampedusa (IT); 17 found, 23 missing</b><br>Source: LR/AFP/Le Figaro/EP/Diario de Noticias/TunisieSoir<br>
 
 <br>
 
