--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/03/11</b><br>Number of person: <b>40</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned after boat sank near Kerkenneh (TN) on way to Lampedusa (IT); 17 found, 23 missing</b><br>Source: LR/AFP/Le Figaro/EP/Diario de Noticias/TunisieSoir<br>
+Found dead: <b>25/12/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead on board boat that was rescued between the Turkish coast and Lesbos (GR); 76 rescued</b><br>Source: Watch TheMed<br>
 
 <br>
 
